--- a/docs-01/index.html
+++ b/docs-01/index.html
@@ -12,22 +12,29 @@
         <span>Button</span>
         <div class="liquid"></div>
     </a>
-       <a href="#">
+    <a href="#">
         <span>Button</span>
         <div class="liquid"></div>
     </a>
-       <a href="#">
-        <span>Button</span>
-        <div class="liquid"></div>
-    </a>
-       <a href="#">
-        <span>Button</span>
-        <div class="liquid"></div>
-    </a>
-       <a href="#">
-        <span>Button</span>
-        <div class="liquid"></div>
-    </a>
+    </div>
+
+    <div>
+        <div class="input-group">
+            <input type="text" id="firstName" required class="input">
+            <label for="firstName" class="input-label">First Name</label>
+        </div>
+        <div class="input-group">
+            <input type="text" id="lastName" required class="input">
+            <label for="lastName" class="input-label">Last Name</label>
+        </div>
+        <div class="input-group">
+            <input type="text" id="phoneNumber" required class="input">
+            <label for="phoneNumber" class="input-label">Phone Number</label>
+        </div>
+        <div class="input-group">
+            <input type="text" id="emailAddress" required class="input">
+            <label for="emailAddress" class="input-label">Email Address</label>
+        </div>
     </div>
 </body>
 
