--- a/docs-01/index.html
+++ b/docs-01/index.html
@@ -2,20 +2,20 @@
 <html>
 
 <head>
-  <meta charset="utf-8">
-  <link rel="stylesheet" href="index.css">
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="index.css">
 </head>
 
 <body>
     <div class="container">
-    <a href="#">
-        <span>Button</span>
-        <div class="liquid"></div>
-    </a>
-    <a href="#">
-        <span>Button</span>
-        <div class="liquid"></div>
-    </a>
+        <a href="#">
+            <span>Button</span>
+            <div class="liquid"></div>
+        </a>
+        <a href="#">
+            <span>Button</span>
+            <div class="liquid"></div>
+        </a>
     </div>
 
     <div>
@@ -35,6 +35,10 @@
             <input type="text" id="emailAddress" required class="input">
             <label for="emailAddress" class="input-label">Email Address</label>
         </div>
+    </div>
+
+    <div class="folder">
+        <div class="tab"> </div>
     </div>
 </body>
 
