--- a/game/index.html
+++ b/game/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="utf-8">
     <link rel="stylesheet" href="index.css">
     <script type="module" src="index.js"></script>
 </head>
