--- a/game/index.html
+++ b/game/index.html
@@ -3,6 +3,10 @@
 
 <head>
     <meta charset="utf-8">
+    <meta name="apple-mobile-web-app-capable" content="yes"/>
+    <meta name="full-screen" content="yes"/>
+    <meta name="screen-orientation" content="landscape"/>
+    <meta name="viewport" content="user-scalable=0"/>
     <link rel="stylesheet" href="index.css">
     <script type="module" src="index.js"></script>
 </head>
