Experimenting with HTML, CSS, and JS.

--- a/recipes/iced-brown-sugar-oatmilk-shaken-espresso/index.html
+++ b/recipes/iced-brown-sugar-oatmilk-shaken-espresso/index.html
@@ -13,19 +13,19 @@
         <div class="ingredients">
             <h2>Ingredients</h2>
             <ul>
-                <li>1/2 cup medium roast coffee</li>
-                <li>1/2 cup oatmilk</li>
-                <li>2 tbsp light brown sugar</li>
-                <li>1/4 tsp cinnamon</li>
-                <li>1/2 tsp vanilla extract</li>
-                <li>1 1/2 cups ice</li>
+                <li><div class="list-number-text"><div class="list-number">1/2</div><div class="list-text">cup medium roast coffee</div></div></li>
+                <li><div class="list-number-text"><div class="list-number">1/2</div><div class="list-text">cup oatmilk</div></div></li>
+                <li><div class="list-number-text"><div class="list-number">2</div><div class="list-text">tbsp light brown sugar</div></div></li>
+                <li><div class="list-number-text"><div class="list-number">1/4</div><div class="list-text">tsp cinnamon</div></div></li>
+                <li><div class="list-number-text"><div class="list-number">1/2</div><div class="list-text">tsp vanilla extract</div></div></li>
+                <li><div class="list-number-text"><div class="list-number">1 1/2</div><div class="list-text">cups ice</div></div></li>
             </ul>
         </div>
         <div class="utensils">
             <h2>Utensils</h2>
             <ul>
-                <li>cocktail shaker</li>
-                <li>liquid measuring cup</li>
+                <li><div class="list-number-text"><div class="list-number">1</div><div class="list-text">liquid measuring cup</div></div></li>
+                <li><div class="list-number-text"><div class="list-number">1</div><div class="list-text">cocktail shaker</div></div></li>
             </ul>
         </div>
     </div>
