Experimenting with HTML, CSS, and JS.

--- a/recipes/iced-brown-sugar-oatmilk-shaken-espresso/index.html
+++ b/recipes/iced-brown-sugar-oatmilk-shaken-espresso/index.html
@@ -38,7 +38,7 @@
         <h3>Step 03</h3>
         <p>Place roughly 1 cup of ice in the cocktail shaker. Pour the light brown sugar mixture over the ice, then the coffee. Close the cocktail shaker and shake for about 15 seconds.</p>
         <h3>Step 04</h3>
-        <p>Open the cocktail shaker and pour the contents into the container you'll be drinking the coffee out of. Make sure there's still some room left in the container to add the oatmilk. Now add the oatmilk and give the drink a light stir.</p>
+        <p>Open the cocktail shaker and pour the contents into the container you'll be drinking the coffee out of. Make sure there's still some room left in the container for the oatmilk. Now add the oatmilk and give the drink a light stir.</p>
         <h3>Step 05</h3>
         <p>Add the remaining 1/2 cup of ice to the container and enjoy!</p>
     </div>
