Experimenting with HTML, CSS, and JS.

--- a/recipes/italian-meatballs/index.html
+++ b/recipes/italian-meatballs/index.html
@@ -37,7 +37,7 @@
         <h3>Step 02</h3>
         <p>Place the ground beef into the large bowl and fold the ground beef onto itself until all the ingredients are evenly mixed.</p>
         <h3>Step 03</h3>
-        <p>Line the baking sheet with tin foil and fill the sheet with golf ball sized meatballs. An easy way to make golf ball sized meatballs is to scoop the ground beef out with an ice cream spoon.</p>
+        <p>Line the baking sheet with tin foil and fill the sheet with golf ball sized meatballs. An easy way to make golf ball sized meatballs is to scoop the ground beef out with an ice cream scooper.</p>
         <h3>Step 04</h3>
         <p>Place the meatballs in the oven for 15 minutes. Make sure to turn the meatballs over halfway through the cook time.</p>
         <h3>Step 05</h3>
