Experimenting with HTML, CSS, and JS.

--- a/recipes/italian-meatballs/index.html
+++ b/recipes/italian-meatballs/index.html
@@ -27,6 +27,7 @@
             <ul>
                 <li><div class="list-number-text"><div class="list-number">1</div><div class="list-text">large bowl</div></div></li>
                 <li><div class="list-number-text"><div class="list-number">1</div><div class="list-text">baking sheet</div></div></li>
+                <li><div class="list-number-text"><div class="list-number">1</div><div class="list-text">ice cream scooper</div></div></li>
             </ul>
         </div>
     </div>
