Experimenting with HTML, CSS, and JS.

--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
 <body>
     <h1>My Website!</h1>
     <div>
-    <a href="./games/rocks/index.html">Rocks</a>
+    <a href="./games/rocks">Rocks</a>
     </div>
     <div>
-    <a href="./recipes/iced-brown-sugar-oatmilk-shaken-espresso/index.html">Iced Brown Sugar Oatmilk Shaken Espresso</a>
+    <a href="./recipes/iced-brown-sugar-oatmilk-shaken-espresso">Iced Brown Sugar Oatmilk Shaken Espresso</a>
     </div>
     <div>
-    <a href="./recipes/italian-meatballs/index.html">Italian Meatballs</a>
+    <a href="./recipes/italian-meatballs">Italian Meatballs</a>
     </div>
     <div>
-    <a href="./recipes/chicken-and-gnocchi-soup/index.html">Chicken And Gnocchi Soup</a>
+    <a href="./recipes/chicken-and-gnocchi-soup">Chicken And Gnocchi Soup</a>
     </div>
 </body>
 
