--- a/index.html
+++ b/index.html
@@ -8,19 +8,24 @@
 </head>
 
 <body>
-    <h1>My Website!</h1>
-    <div>
-    <a href="./games/rocks">Rocks</a>
+    <h1>lukemonroe.github.io</h1>
+    <hr>
+    <div class="categories">
+        <h2>Games</h2>
+        <div class="links">
+            <a href="./games/rocks/index.html">Rocks</a>
+        </div>
+        <h2>Recipes</h2>
+        <div class="links">
+            <a href="./recipes/chicken-and-gnocchi-soup/index.html">Chicken And Gnocchi Soup</a>
+            <a href="./recipes/iced-brown-sugar-oatmilk-shaken-espresso/index.html">Iced Brown Sugar Oatmilk Shaken Espresso</a>
+            <a href="./recipes/italian-meatballs/index.html">Italian Meatballs</a>
+        </div>
+        <h2>3D Prints</h2>
+        </div>
     </div>
-    <div>
-    <a href="./recipes/iced-brown-sugar-oatmilk-shaken-espresso">Iced Brown Sugar Oatmilk Shaken Espresso</a>
-    </div>
-    <div>
-    <a href="./recipes/italian-meatballs">Italian Meatballs</a>
-    </div>
-    <div>
-    <a href="./recipes/chicken-and-gnocchi-soup">Chicken And Gnocchi Soup</a>
-    </div>
+    <hr>
+    <footer>Created by: Luke Monroe</footer>
 </body>
 
 </html>
