Experimenting with HTML, CSS, and JS.

--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
             <a href="./recipes/italian-meatballs/index.html">Italian Meatballs</a>
         </div>
         <h2>3D Prints</h2>
+        <div class="links">
+            <a href="./prints/candle/index.html">Candle</a>
+            <a href="./prints/diamond-container/index.html">Diamond Container</a>
+            <a href="./prints/pentahedron/index.html">Pentahedron</a>
         </div>
     </div>
     <hr>
