Experimenting with HTML, CSS, and JS.

--- a/recipes/chicken-and-gnocchi-soup/index.html
+++ b/recipes/chicken-and-gnocchi-soup/index.html
@@ -10,8 +10,8 @@
 
 <body>
     <h1>Chicken And Gnocchi Soup</h1>
-    <div class="ingredients-and-utensils">
-        <div class="ingredients">
+    <div class="flex-row">
+        <div class="flex-column">
             <h2>Ingredients</h2>
             <ul>
                 <li><div class="list-number-text"><div class="list-number">16</div><div class="list-text">oz cubed chicken breast (cooked)</div></div></li>
@@ -28,7 +28,7 @@
                 <li><div class="list-number-text"><div class="list-number">1/4</div><div class="list-text">tsp salt</div></div></li>
             </ul>
         </div>
-        <div class="utensils">
+        <div class="flex-column">
             <h2>Utensils</h2>
             <ul>
                 <li><div class="list-number-text"><div class="list-number">1</div><div class="list-text">large pot with lid</div></div></li>
@@ -37,7 +37,7 @@
             </ul>
         </div>
     </div>
-    <div class="how-to-make">
+    <div class="flex-column">
         <h2>How To Make</h2>
         <h3>Step 01</h3>
         <p>Cut up the celery, onion, and carrots into small bite-sized pieces. Combine the olive oil, celery, onion, carots, garlic, pepper, and salt into the large pot.</p>
