--- a/recipes/iced-brown-sugar-oatmilk-shaken-espresso/index.html
+++ b/recipes/iced-brown-sugar-oatmilk-shaken-espresso/index.html
@@ -10,8 +10,8 @@
 
 <body>
     <h1>Iced Brown Sugar Oatmilk Shaken Espresso</h1>
-    <div class="ingredients-and-utensils">
-        <div class="ingredients">
+    <div class="flex-row">
+        <div class="flex-column">
             <h2>Ingredients</h2>
             <ul>
                 <li><div class="list-number-text"><div class="list-number">1/2</div><div class="list-text">cup medium roast coffee</div></div></li>
@@ -22,7 +22,7 @@
                 <li><div class="list-number-text"><div class="list-number">1 1/2</div><div class="list-text">cups ice</div></div></li>
             </ul>
         </div>
-        <div class="utensils">
+        <div class="flex-column">
             <h2>Utensils</h2>
             <ul>
                 <li><div class="list-number-text"><div class="list-number">1</div><div class="list-text">liquid measuring cup</div></div></li>
@@ -30,7 +30,7 @@
             </ul>
         </div>
     </div>
-    <div class="how-to-make">
+    <div class="flex-column">
         <h2>How To Make</h2>
         <h3>Step 01</h3>
         <p>Brew the coffee. Use the specialty brew option if your coffee maker has it. Since this recipe is using regular coffee instead of espresso, the coffee needs to be more concentrated. If your coffee maker doesn't have a specialty brew option, add twice the amount of coffee grounds you would normally use to brew a cup of coffee.</p>
