--- a/recipes/italian-meatballs/index.html
+++ b/recipes/italian-meatballs/index.html
@@ -10,8 +10,8 @@
 
 <body>
     <h1>Italian Meatballs</h1>
-    <div class="ingredients-and-utensils">
-        <div class="ingredients">
+    <div class="flex-row">
+        <div class="flex-column">
             <h2>Ingredients</h2>
             <ul>
                 <li><div class="list-number-text"><div class="list-number">32</div><div class="list-text">oz ground beef</div></div></li>
@@ -23,7 +23,7 @@
                 <li><div class="list-number-text"><div class="list-number">1</div><div class="list-text">tsp salt</div></div></li>
             </ul>
         </div>
-        <div class="utensils">
+        <div class="flex-column">
             <h2>Utensils</h2>
             <ul>
                 <li><div class="list-number-text"><div class="list-number">1</div><div class="list-text">large bowl</div></div></li>
@@ -32,7 +32,7 @@
             </ul>
         </div>
     </div>
-    <div class="how-to-make">
+    <div class="flex-column">
         <h2>How To Make</h2>
         <h3>Step 01</h3>
         <p>Preheat the oven to 375 degrees. Combine the eggs, italian seasoning, basil flakes, black pepper, garlic powder, and salt in the large bowl. Mix the ingredients together thoroughly.</p>
