Experimenting with HTML, CSS, and JS.

--- a/recipes/iced-brown-sugar-oatmilk-shaken-espresso/index.html
+++ b/recipes/iced-brown-sugar-oatmilk-shaken-espresso/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <h1>Iced Brown Sugar Oatmilk Shaken Espresso</h1>
+    <header><h1>Iced Brown Sugar Oatmilk Shaken Espresso</h1></header>
     <div class="flex-row">
         <div class="flex-column">
             <h2>Ingredients</h2>
