--- a/recipes/chicken-and-gnocchi-soup/index.html
+++ b/recipes/chicken-and-gnocchi-soup/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <h1>Chicken And Gnocchi Soup</h1>
+    <header><h1>Chicken And Gnocchi Soup</h1></header>
     <div class="flex-row">
         <div class="flex-column">
             <h2>Ingredients</h2>
