--- a/recipes/italian-meatballs/index.html
+++ b/recipes/italian-meatballs/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <h1>Italian Meatballs</h1>
+    <header><h1>Italian Meatballs</h1></header>
     <div class="flex-row">
         <div class="flex-column">
             <h2>Ingredients</h2>
