Experimenting with HTML, CSS, and JS.

--- a/recipes/chicken-and-gnocchi-soup/index.html
+++ b/recipes/chicken-and-gnocchi-soup/index.html
@@ -14,26 +14,26 @@
         <div class="flex-column">
             <h2>Ingredients</h2>
             <ul>
-                <li><div class="list-number-text"><div class="list-number">16</div><div class="list-text">oz cubed chicken breast (cooked)</div></div></li>
-                <li><div class="list-number-text"><div class="list-number">16</div><div class="list-text">oz mini potato gnocchi</div></div></li>
-                <li><div class="list-number-text"><div class="list-number">4</div><div class="list-text">cups chicken broth</div></div></li>
-                <li><div class="list-number-text"><div class="list-number">2</div><div class="list-text">cups half-and-half cream</div></div></li>
-                <li><div class="list-number-text"><div class="list-number">2</div><div class="list-text">cups baby spinach leaves</div></div></li>
-                <li><div class="list-number-text"><div class="list-number">1</div><div class="list-text">cup celery</div></div></li>
-                <li><div class="list-number-text"><div class="list-number">1</div><div class="list-text">cup onion</div></div></li>
-                <li><div class="list-number-text"><div class="list-number">1/2</div><div class="list-text">cup carrots</div></div></li>
-                <li><div class="list-number-text"><div class="list-number">1</div><div class="list-text">tbsp olive oil</div></div></li>
-                <li><div class="list-number-text"><div class="list-number">1/2</div><div class="list-text">tbsp minced garlic</div></div></li>
-                <li><div class="list-number-text"><div class="list-number">1/4</div><div class="list-text">tsp pepper</div></div></li>
-                <li><div class="list-number-text"><div class="list-number">1/4</div><div class="list-text">tsp salt</div></div></li>
+                <li><div class="li"><div class="number">16</div><div class="text">oz cubed chicken breast (cooked)</div></div></li>
+                <li><div class="li"><div class="number">16</div><div class="text">oz mini potato gnocchi</div></div></li>
+                <li><div class="li"><div class="number">4</div><div class="text">cups chicken broth</div></div></li>
+                <li><div class="li"><div class="number">2</div><div class="text">cups half-and-half cream</div></div></li>
+                <li><div class="li"><div class="number">2</div><div class="text">cups baby spinach leaves</div></div></li>
+                <li><div class="li"><div class="number">1</div><div class="text">cup celery</div></div></li>
+                <li><div class="li"><div class="number">1</div><div class="text">cup onion</div></div></li>
+                <li><div class="li"><div class="number">1/2</div><div class="text">cup carrots</div></div></li>
+                <li><div class="li"><div class="number">1</div><div class="text">tbsp olive oil</div></div></li>
+                <li><div class="li"><div class="number">1/2</div><div class="text">tbsp minced garlic</div></div></li>
+                <li><div class="li"><div class="number">1/4</div><div class="text">tsp pepper</div></div></li>
+                <li><div class="li"><div class="number">1/4</div><div class="text">tsp salt</div></div></li>
             </ul>
         </div>
         <div class="flex-column">
             <h2>Utensils</h2>
             <ul>
-                <li><div class="list-number-text"><div class="list-number">1</div><div class="list-text">large pot with lid</div></div></li>
-                <li><div class="list-number-text"><div class="list-number">1</div><div class="list-text">cutting board</div></div></li>
-                <li><div class="list-number-text"><div class="list-number">1</div><div class="list-text">wooden spoon</div></div></li>
+                <li><div class="li"><div class="number">1</div><div class="text">large pot with lid</div></div></li>
+                <li><div class="li"><div class="number">1</div><div class="text">cutting board</div></div></li>
+                <li><div class="li"><div class="number">1</div><div class="text">wooden spoon</div></div></li>
             </ul>
         </div>
     </div>
