--- a/recipes/iced-brown-sugar-oatmilk-shaken-espresso/index.html
+++ b/recipes/iced-brown-sugar-oatmilk-shaken-espresso/index.html
@@ -14,19 +14,19 @@
         <div class="flex-column">
             <h2>Ingredients</h2>
             <ul>
-                <li><div class="list-number-text"><div class="list-number">1/2</div><div class="list-text">cup medium roast coffee</div></div></li>
-                <li><div class="list-number-text"><div class="list-number">1/2</div><div class="list-text">cup oatmilk</div></div></li>
-                <li><div class="list-number-text"><div class="list-number">2</div><div class="list-text">tbsp light brown sugar</div></div></li>
-                <li><div class="list-number-text"><div class="list-number">1/4</div><div class="list-text">tsp cinnamon</div></div></li>
-                <li><div class="list-number-text"><div class="list-number">1/2</div><div class="list-text">tsp vanilla extract</div></div></li>
-                <li><div class="list-number-text"><div class="list-number">1 1/2</div><div class="list-text">cups ice</div></div></li>
+                <li><div class="li"><div class="number">1/2</div><div class="text">cup medium roast coffee</div></div></li>
+                <li><div class="li"><div class="number">1/2</div><div class="text">cup oatmilk</div></div></li>
+                <li><div class="li"><div class="number">2</div><div class="text">tbsp light brown sugar</div></div></li>
+                <li><div class="li"><div class="number">1/4</div><div class="text">tsp cinnamon</div></div></li>
+                <li><div class="li"><div class="number">1/2</div><div class="text">tsp vanilla extract</div></div></li>
+                <li><div class="li"><div class="number">1 1/2</div><div class="text">cups ice</div></div></li>
             </ul>
         </div>
         <div class="flex-column">
             <h2>Utensils</h2>
             <ul>
-                <li><div class="list-number-text"><div class="list-number">1</div><div class="list-text">liquid measuring cup</div></div></li>
-                <li><div class="list-number-text"><div class="list-number">1</div><div class="list-text">cocktail shaker</div></div></li>
+                <li><div class="li"><div class="number">1</div><div class="text">liquid measuring cup</div></div></li>
+                <li><div class="li"><div class="number">1</div><div class="text">cocktail shaker</div></div></li>
             </ul>
         </div>
     </div>
