--- a/recipes/italian-meatballs/index.html
+++ b/recipes/italian-meatballs/index.html
@@ -14,21 +14,21 @@
         <div class="flex-column">
             <h2>Ingredients</h2>
             <ul>
-                <li><div class="list-number-text"><div class="list-number">32</div><div class="list-text">oz ground beef</div></div></li>
-                <li><div class="list-number-text"><div class="list-number">2</div><div class="list-text">eggs</div></div></li>
-                <li><div class="list-number-text"><div class="list-number">2</div><div class="list-text">tbsp italian seasoning</div></div></li>
-                <li><div class="list-number-text"><div class="list-number">2</div><div class="list-text">tsp basil flakes</div></div></li>
-                <li><div class="list-number-text"><div class="list-number">1</div><div class="list-text">tsp ground black pepper</div></div></li>
-                <li><div class="list-number-text"><div class="list-number">1</div><div class="list-text">tsp garlic powder</div></div></li>
-                <li><div class="list-number-text"><div class="list-number">1</div><div class="list-text">tsp salt</div></div></li>
+                <li><div class="li"><div class="number">32</div><div class="text">oz ground beef</div></div></li>
+                <li><div class="li"><div class="number">2</div><div class="text">eggs</div></div></li>
+                <li><div class="li"><div class="number">2</div><div class="text">tbsp italian seasoning</div></div></li>
+                <li><div class="li"><div class="number">2</div><div class="text">tsp basil flakes</div></div></li>
+                <li><div class="li"><div class="number">1</div><div class="text">tsp ground black pepper</div></div></li>
+                <li><div class="li"><div class="number">1</div><div class="text">tsp garlic powder</div></div></li>
+                <li><div class="li"><div class="number">1</div><div class="text">tsp salt</div></div></li>
             </ul>
         </div>
         <div class="flex-column">
             <h2>Utensils</h2>
             <ul>
-                <li><div class="list-number-text"><div class="list-number">1</div><div class="list-text">large bowl</div></div></li>
-                <li><div class="list-number-text"><div class="list-number">1</div><div class="list-text">baking sheet</div></div></li>
-                <li><div class="list-number-text"><div class="list-number">1</div><div class="list-text">ice cream scooper</div></div></li>
+                <li><div class="li"><div class="number">1</div><div class="text">large bowl</div></div></li>
+                <li><div class="li"><div class="number">1</div><div class="text">baking sheet</div></div></li>
+                <li><div class="li"><div class="number">1</div><div class="text">ice cream scooper</div></div></li>
             </ul>
         </div>
     </div>
