Experimenting with HTML, CSS, and JS.

--- a/recipes/italian-meatballs/index.html
+++ b/recipes/italian-meatballs/index.html
@@ -16,7 +16,7 @@
             <ul>
                 <li><div class="li"><div class="number">32</div><div class="text">oz ground beef</div></div></li>
                 <li><div class="li"><div class="number">2</div><div class="text">eggs</div></div></li>
-                <li><div class="li"><div class="number">2</div><div class="text">tbsp italian seasoning</div></div></li>
+                <li><div class="li"><div class="number">2</div><div class="text">tbsp Italian seasoning</div></div></li>
                 <li><div class="li"><div class="number">2</div><div class="text">tsp basil flakes</div></div></li>
                 <li><div class="li"><div class="number">1</div><div class="text">tsp ground black pepper</div></div></li>
                 <li><div class="li"><div class="number">1</div><div class="text">tsp garlic powder</div></div></li>
@@ -35,7 +35,7 @@
     <div class="flex-column">
         <h2>How To Make</h2>
         <h3>Step 01</h3>
-        <p>Preheat the oven to 375 degrees. Combine the eggs, italian seasoning, basil flakes, black pepper, garlic powder, and salt in the large bowl. Mix the ingredients together thoroughly.</p>
+        <p>Preheat the oven to 375 degrees. Combine the eggs, Italian seasoning, basil flakes, black pepper, garlic powder, and salt in the large bowl. Mix the ingredients together thoroughly.</p>
         <h3>Step 02</h3>
         <p>Place the ground beef into the large bowl and fold the ground beef onto itself until all the ingredients are evenly mixed.</p>
         <h3>Step 03</h3>
@@ -43,7 +43,7 @@
         <h3>Step 04</h3>
         <p>Place the meatballs in the oven for 15 minutes. Make sure to turn the meatballs over halfway through the cook time.</p>
         <h3>Step 05</h3>
-        <p>Take the meatballs out of the oven. Immediately place all of the meatballs into another container to seperate them out from the grease on the baking sheet.</p>
+        <p>Take the meatballs out of the oven. Immediately place all the meatballs into another container to separate them out from the grease on the baking sheet.</p>
         <h3>Step 06</h3>
         <p>Let the meatballs cool off for about 5 minutes and enjoy!</p>
     </div>
