--- a/recipes/chicken-and-gnocchi-soup/index.html
+++ b/recipes/chicken-and-gnocchi-soup/index.html
@@ -40,7 +40,7 @@
     <div class="flex-column">
         <h2>How To Make</h2>
         <h3>Step 01</h3>
-        <p>Cut up the celery, onion, and carrots into small bite-sized pieces. Combine the olive oil, celery, onion, carots, garlic, pepper, and salt into the large pot.</p>
+        <p>Cut up the celery, onion, and carrots into small bite-sized pieces. Combine the olive oil, celery, onion, carrots, garlic, pepper, and salt into the large pot.</p>
         <h3>Step 02</h3>
         <p>Place the large pot on the stove and set the burner to a medium low heat. Stirring occasionally, let the ingredients simmer for 10 minutes.</p>
         <h3>Step 03</h3>
