--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css">
+    <script type="module" src="index.js"></script>
 </head>
 
 <body>
-    <h1>lukemonroe.github.io</h1>
+    <header><h1>lukemonroe.github.io</h1><button class="theme" id="theme">theme</button></header>
     <hr>
     <div class="categories">
         <h2>Games</h2>
