Experimenting with HTML, CSS, and JS.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <header><h1>lukemonroe.github.io</h1><button class="theme" id="theme">theme</button></header>
+    <header><h1>lukemonroe.github.io</h1></header>
     <hr>
     <div class="categories">
         <h2>Games</h2>
@@ -28,6 +28,8 @@
             <a href="./prints/diamond-container/index.html">Diamond Container</a>
             <a href="./prints/pentahedron/index.html">Pentahedron</a>
         </div>
+        <h2>Theme</h2>
+        <button class="theme" id="theme"></button>
     </div>
     <hr>
     <footer>Created by: Luke Monroe</footer>
