--- a/prints/diamond-container/index.html
+++ b/prints/diamond-container/index.html
@@ -4,16 +4,18 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="../index.css">
+    <script type="module" src="../index.js"></script>
 </head>
 
 <body>
-    <h1>Diamond Container</h1>
+    <header><h1>Diamond Container</h1></header>
     <img src="diamond-container.jpg">
     <div class="description">
         <h2>Description</h2>
         <p>This is the description.</p>
     </div>
+    <footer>Created by: Luke Monroe</footer>
 </body>
 
 </html>
