Experimenting with HTML, CSS, and JS.

--- a/prints/candle/index.html
+++ b/prints/candle/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <header><h1>Candle</h1></header>
-    <img src="candle.jpg">
+    <div class="image"><img id="image" src="candle.jpg"></div>
     <div class="description">
         <h2>Description</h2>
         <p>This is the description.</p>
