--- a/prints/diamond-container/index.html
+++ b/prints/diamond-container/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <header><h1>Diamond Container</h1></header>
-    <img src="diamond-container.jpg">
+    <div class="image"><img id="image" src="diamond-container.jpg"></div>
     <div class="description">
         <h2>Description</h2>
         <p>This is the description.</p>
