--- a/prints/pentahedron/index.html
+++ b/prints/pentahedron/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <header><h1>Pentahedron</h1></header>
-    <img src="pentahedron.jpg">
+    <div class="image"><img id="image" src="pentahedron.jpg"></div>
     <div class="description">
         <h2>Description</h2>
         <p>This is the description.</p>
