Experimenting with HTML, CSS, and JS.

--- a/index.html
+++ b/index.html
@@ -24,9 +24,7 @@
         </div>
         <h2>3D Prints</h2>
         <div class="links">
-            <a href="./prints/candle/index.html">Candle</a>
-            <a href="./prints/diamond-container/index.html">Diamond Container</a>
-            <a href="./prints/pentahedron/index.html">Pentahedron</a>
+            <a href="./prints/index.html">Print Gallery</a>
         </div>
         <h2>Theme</h2>
         <button class="theme" id="theme"></button>
