Experimenting with HTML, CSS, and JS.

--- a/prints/index.html
+++ b/prints/index.html
@@ -12,12 +12,40 @@
     <header><h1>3D Prints</h1></header>
     <div class="row">
         <div class="column">
+            <h2>Bean Tray</h2>
+            <img src="pictures/bean-tray.jpg">
+        </div>
+        <div class="column">
             <h2>Bubble Candle</h2>
             <img src="pictures/bubble-candle.jpg">
         </div>
         <div class="column">
+            <h2>Checkered Container</h2>
+            <img src="pictures/checkered-container-closed.jpg">
+        </div>
+        <div class="column">
+            <h2>Connectable Squares</h2>
+            <img src="pictures/connectable-squares.jpg">
+        </div>
+        <div class="column">
+            <h2>Desk Hook</h2>
+            <img src="pictures/desk-hook.jpg">
+        </div>
+        <div class="column">
             <h2>Diamond Container</h2>
-            <img src="pictures/diamond-container.jpg">
+            <img src="pictures/diamond-container-closed.jpg">
+        </div>
+        <div class="column">
+            <h2>Experimental Gears</h2>
+            <img src="pictures/experimental-gears.jpg">
+        </div>
+        <div class="column">
+            <h2>Hexagon Tray</h2>
+            <img src="pictures/hexagon-tray.jpg">
+        </div>
+        <div class="column">
+            <h2>Mario Bomb</h2>
+            <img src="pictures/mario-bomb.jpg">
         </div>
         <div class="column">
             <h2>Pentahedron</h2>
