Experimenting with HTML, CSS, and JS.

--- a/prints/index.html
+++ b/prints/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <header><h1>3D Prints</h1></header>
+    <header><h1>Print Gallery</h1></header>
     <div class="row">
         <div class="column">
             <h2>Bean Tray</h2>
