Experimenting with HTML, CSS, and JS.

--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
         <div class="links">
             <a href="./prints/index.html">Print Gallery</a>
         </div>
+        <h2>Tools</h2>
+        <div class="links">
+            <a href="./tools/color-generator/index.html">Color Generator</a>
+        </div>
         <h2>Theme</h2>
         <button class="theme" id="theme"></button>
     </div>
