--- a/tools/color-generator/index.html
+++ b/tools/color-generator/index.html
@@ -10,8 +10,7 @@
 
 <body>
     <header><h1>Color Generator</h1></header>
-    <div class="row" id="row">
-    </div>
+    <div class="row" id="row"></div>
     <footer>Created by: Luke Monroe</footer>
 </body>
 
