--- a/tools/color-generator/color/index.html
+++ b/tools/color-generator/color/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <header><h1>Color</h1></header>
+    <header><h1>Color Picker</h1></header>
     <div class="row" id="row"></div>
     <footer>Created by: Luke Monroe</footer>
 </body>
