Experimenting with HTML, CSS, and JS.

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </div>
         <h2>Tools</h2>
         <div class="links">
-            <a href="./tools/color-generator/index.html">Color Generator</a>
+            <a href="./tools/color-picker/index.html">Color Picker</a>
         </div>
         <h2>Theme</h2>
         <button class="theme" id="theme"></button>
