Experimenting with HTML, CSS, and JS.

--- a/tools/color-picker/index.html
+++ b/tools/color-picker/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <header><h1>Color Picker</h1></header>
-    <div class="row" id="row"></div>
+    <div class="outer-column" id="outer-column"></div>
     <footer>Created by: Luke Monroe</footer>
 </body>
 
