Experimenting with HTML, CSS, and JS.

--- a/index.html
+++ b/index.html
@@ -11,27 +11,29 @@
 <body>
     <header><h1>lukemonroe.github.io</h1></header>
     <hr>
-    <div class="categories">
-        <h2>Games</h2>
-        <div class="links">
+    <div class="outer-column">
+        <div class="inner-column">
+            <h2>Games</h2>
             <a href="./games/rocks/index.html">Rocks</a>
         </div>
-        <h2>Recipes</h2>
-        <div class="links">
+        <div class="inner-column">
+            <h2>Recipes</h2>
             <a href="./recipes/chicken-and-gnocchi-soup/index.html">Chicken And Gnocchi Soup</a>
             <a href="./recipes/iced-brown-sugar-oatmilk-shaken-espresso/index.html">Iced Brown Sugar Oatmilk Shaken Espresso</a>
             <a href="./recipes/italian-meatballs/index.html">Italian Meatballs</a>
         </div>
-        <h2>3D Prints</h2>
-        <div class="links">
+        <div class="inner-column">
+            <h2>3D Prints</h2>
             <a href="./prints/index.html">Print Gallery</a>
         </div>
-        <h2>Tools</h2>
-        <div class="links">
+        <div class="inner-column">
+            <h2>Tools</h2>
             <a href="./tools/color-picker/index.html">Color Picker</a>
         </div>
-        <h2>Theme</h2>
-        <button class="theme" id="theme"></button>
+        <div class="inner-column">
+            <h2>Theme</h2>
+            <button class="theme" id="theme"></button>
+        </div>
     </div>
     <hr>
     <footer>Created by: Luke Monroe</footer>
