Experimenting with HTML, CSS, and JS.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header><h1>lukemonroe.github.io</h1></header>
     <hr>
-    <div class="outer-column">
+    <div class="outer-column" id="outer-column">
         <div class="inner-column">
             <h2>Games</h2>
             <a href="./games/rocks/index.html">Rocks</a>
@@ -29,10 +29,6 @@
         <div class="inner-column">
             <h2>Tools</h2>
             <a href="./tools/color-picker/index.html">Color Picker</a>
-        </div>
-        <div class="inner-column">
-            <h2>Theme</h2>
-            <button class="theme" id="theme"></button>
         </div>
     </div>
     <hr>
