Experimenting with HTML, CSS, and JS.

--- a/recipes/iced-brown-sugar-oatmilk-shaken-espresso/index.html
+++ b/recipes/iced-brown-sugar-oatmilk-shaken-espresso/index.html
@@ -10,27 +10,27 @@
 
 <body>
     <header><h1>Iced Brown Sugar Oatmilk Shaken Espresso</h1></header>
-    <div class="flex-row">
-        <div class="flex-column">
+    <div class="outter-row">
+        <div class="inner-column">
             <h2>Ingredients</h2>
             <ul>
-                <li><div class="li"><div class="number">1/2</div><div class="text">cup medium roast coffee</div></div></li>
-                <li><div class="li"><div class="number">1/2</div><div class="text">cup oatmilk</div></div></li>
-                <li><div class="li"><div class="number">2</div><div class="text">tbsp light brown sugar</div></div></li>
-                <li><div class="li"><div class="number">1/4</div><div class="text">tsp cinnamon</div></div></li>
-                <li><div class="li"><div class="number">1/2</div><div class="text">tsp vanilla extract</div></div></li>
-                <li><div class="li"><div class="number">1 1/2</div><div class="text">cups ice</div></div></li>
+                <li>1/2 cup medium roast coffee</li>
+                <li>1/2 cup oatmilk</li>
+                <li>2 tbsp light brown sugar</li>
+                <li>1/4 tsp cinnamon</li>
+                <li>1/2 tsp vanilla extract</li>
+                <li>1 1/2 cups ice</li>
             </ul>
         </div>
-        <div class="flex-column">
+        <div class="inner-column">
             <h2>Utensils</h2>
             <ul>
-                <li><div class="li"><div class="number">1</div><div class="text">liquid measuring cup</div></div></li>
-                <li><div class="li"><div class="number">1</div><div class="text">cocktail shaker</div></div></li>
+                <li>1 liquid measuring cup</li>
+                <li>1 cocktail shaker</li>
             </ul>
         </div>
     </div>
-    <div class="flex-column">
+    <div class="outter-column">
         <h2>How To Make</h2>
         <h3>Step 01</h3>
         <p>Brew the coffee. Use the specialty brew option if your coffee maker has it. Since this recipe is using regular coffee instead of espresso, the coffee needs to be more concentrated. If your coffee maker doesn't have a specialty brew option, add twice the amount of coffee grounds you would normally use to brew a cup of coffee.</p>
@@ -43,7 +43,10 @@
         <h3>Step 05</h3>
         <p>Add the remaining 1/2 cup of ice to the container and enjoy!</p>
     </div>
-    <footer>This recipe was based on: <a href="https://athome.starbucks.com/recipe/iced-brown-sugar-oatmilk-shaken-espresso">Starbucks Iced Brown Sugar Oatmilk Shaken Espresso</a></footer>
+    <footer>
+        <p>This recipe was based on: <a href="https://athome.starbucks.com/recipe/iced-brown-sugar-oatmilk-shaken-espresso">Starbucks Iced Brown Sugar Oatmilk Shaken Espresso</a></p>
+        <p>Created by: Luke Monroe</p>
+    </footer>
 </body>
 
 </html>
