--- a/recipes/italian-meatballs/index.html
+++ b/recipes/italian-meatballs/index.html
@@ -10,29 +10,29 @@
 
 <body>
     <header><h1>Italian Meatballs</h1></header>
-    <div class="flex-row">
-        <div class="flex-column">
+    <div class="outter-row">
+        <div class="inner-column">
             <h2>Ingredients</h2>
             <ul>
-                <li><div class="li"><div class="number">32</div><div class="text">oz ground beef</div></div></li>
-                <li><div class="li"><div class="number">2</div><div class="text">eggs</div></div></li>
-                <li><div class="li"><div class="number">2</div><div class="text">tbsp Italian seasoning</div></div></li>
-                <li><div class="li"><div class="number">2</div><div class="text">tsp basil flakes</div></div></li>
-                <li><div class="li"><div class="number">1</div><div class="text">tsp ground black pepper</div></div></li>
-                <li><div class="li"><div class="number">1</div><div class="text">tsp garlic powder</div></div></li>
-                <li><div class="li"><div class="number">1</div><div class="text">tsp salt</div></div></li>
+                <li>32 oz ground beef</li>
+                <li>2 eggs</li>
+                <li>2 tbsp Italian seasoning</li>
+                <li>2 tsp basil flakes</li>
+                <li>1 tsp ground black pepper</li>
+                <li>1 tsp garlic powder</li>
+                <li>1 tsp salt</li>
             </ul>
         </div>
-        <div class="flex-column">
+        <div class="inner-column">
             <h2>Utensils</h2>
             <ul>
-                <li><div class="li"><div class="number">1</div><div class="text">large bowl</div></div></li>
-                <li><div class="li"><div class="number">1</div><div class="text">baking sheet</div></div></li>
-                <li><div class="li"><div class="number">1</div><div class="text">ice cream scooper</div></div></li>
+                <li>1 large bowl</li>
+                <li>1 baking sheet</li>
+                <li>1 ice cream scooper</li>
             </ul>
         </div>
     </div>
-    <div class="flex-column">
+    <div class="outter-column">
         <h2>How To Make</h2>
         <h3>Step 01</h3>
         <p>Preheat the oven to 375 degrees. Combine the eggs, Italian seasoning, basil flakes, black pepper, garlic powder, and salt in the large bowl. Mix the ingredients together thoroughly.</p>
@@ -47,7 +47,10 @@
         <h3>Step 06</h3>
         <p>Let the meatballs cool off for about 5 minutes and enjoy!</p>
     </div>
-    <footer>This recipe was based on: <a href="https://www.allrecipes.com/recipe/278313/easy-meatballs">Allrecipes Easy Meatballs</a></footer>
+    <footer>
+        <p>This recipe was based on: <a href="https://www.allrecipes.com/recipe/278313/easy-meatballs">Allrecipes Easy Meatballs</a></p>
+        <p>Created by: Luke Monroe</p>
+    </footer>
 </body>
 
 </html>
