--- a/recipes/chicken-and-gnocchi-soup/index.html
+++ b/recipes/chicken-and-gnocchi-soup/index.html
@@ -10,34 +10,34 @@
 
 <body>
     <header><h1>Chicken And Gnocchi Soup</h1></header>
-    <div class="flex-row">
-        <div class="flex-column">
+    <div class="outter-row">
+        <div class="inner-column">
             <h2>Ingredients</h2>
             <ul>
-                <li><div class="li"><div class="number">16</div><div class="text">oz cubed chicken breast (cooked)</div></div></li>
-                <li><div class="li"><div class="number">16</div><div class="text">oz mini potato gnocchi</div></div></li>
-                <li><div class="li"><div class="number">4</div><div class="text">cups chicken broth</div></div></li>
-                <li><div class="li"><div class="number">2</div><div class="text">cups half-and-half cream</div></div></li>
-                <li><div class="li"><div class="number">2</div><div class="text">cups baby spinach leaves</div></div></li>
-                <li><div class="li"><div class="number">1</div><div class="text">cup celery</div></div></li>
-                <li><div class="li"><div class="number">1</div><div class="text">cup onion</div></div></li>
-                <li><div class="li"><div class="number">1/2</div><div class="text">cup carrots</div></div></li>
-                <li><div class="li"><div class="number">1</div><div class="text">tbsp olive oil</div></div></li>
-                <li><div class="li"><div class="number">1/2</div><div class="text">tbsp minced garlic</div></div></li>
-                <li><div class="li"><div class="number">1/4</div><div class="text">tsp pepper</div></div></li>
-                <li><div class="li"><div class="number">1/4</div><div class="text">tsp salt</div></div></li>
+                <li>16 oz cubed chicken breast (cooked)</li>
+                <li>16 oz mini potato gnocchi</li>
+                <li>4 cups chicken broth</li>
+                <li>2 cups half-and-half cream</li>
+                <li>2 cups baby spinach leaves</li>
+                <li>1 cup celery</li>
+                <li>1 cup onion</li>
+                <li>1/2 cup carrots</li>
+                <li>1 tbsp olive oil</li>
+                <li>1/2 tbsp minced garlic</li>
+                <li>1/4 tsp pepper</li>
+                <li>1/4 tsp salt</li>
             </ul>
         </div>
-        <div class="flex-column">
+        <div class="inner-column">
             <h2>Utensils</h2>
             <ul>
-                <li><div class="li"><div class="number">1</div><div class="text">large pot with lid</div></div></li>
-                <li><div class="li"><div class="number">1</div><div class="text">cutting board</div></div></li>
-                <li><div class="li"><div class="number">1</div><div class="text">wooden spoon</div></div></li>
+                <li>1 large pot with lid</li>
+                <li>1 cutting board</li>
+                <li>1 wooden spoon</li>
             </ul>
         </div>
     </div>
-    <div class="flex-column">
+    <div class="outter-column">
         <h2>How To Make</h2>
         <h3>Step 01</h3>
         <p>Cut up the celery, onion, and carrots into small bite-sized pieces. Combine the olive oil, celery, onion, carrots, garlic, pepper, and salt into the large pot.</p>
@@ -52,7 +52,10 @@
         <h3>Step 06</h3>
         <p>Turn off the burner and place the lid on the large pot. Let the soup marinate for 10 minutes and enjoy!</p>
     </div>
-    <footer>This recipe was based on: <a href="https://www.allrecipes.com/recipe/218794/chicken-and-gnocchi-soup">Allrecipes Chicken And Gnocchi Soup</a></footer>
+    <footer>
+        <p>This recipe was based on: <a href="https://www.allrecipes.com/recipe/218794/chicken-and-gnocchi-soup">Allrecipes Chicken And Gnocchi Soup</a></p>
+        <p>Created by: Luke Monroe</p>
+    </footer>
 
 </body>
 
